<resources>
    <string name="app_name">The TTTE Community Admin Quiz</string>
    <string name="homepageActivity">HomePageActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_quiz">QuizActivity</string>

    <string name="question"></string>
    <string name="choice1"></string>
    <string name="choice2"></string>
    <string name="choice3"></string>
    <string name="choice4"></string>
    <string name="banner_ad">ca-app-pub-1124479823240796/4551139297</string>
    <string name="title_activity_selection">selection</string>
    <string name="title_activity_quizscreen">quizscreen</string>
    <string name="title_activity_selectdiff">selectdiff</string>
    <string name="title_activity_results">Results</string>
    <string name="st">string</string>
    <string name="title_activity_answerspage">answerspage</string>

</resources>
