<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.xana.thetttecommunityquiz.QuizActivity"
    tools:showIn="@layout/activity_quiz">

    <!-- Edited by MA 12/31-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="COMPANY NAME/LOGO HERE"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question"
        android:id="@+id/textView"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp" />

    <!-- Buttons -->

    <RadioGroup

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice1"
            android:id="@+id/radioButton"
            android:layout_marginTop="49dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:onClick="chooseAnswer"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice2"
            android:id="@+id/radioButton2"
            android:layout_below="@+id/radioButton"
            android:layout_alignLeft="@+id/radioButton3"
            android:layout_alignStart="@+id/radioButton3"
            android:onClick="chooseAnswer"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:text="@string/choice3"
            android:layout_below="@+id/radioButton2"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:onClick="chooseAnswer"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice4"
            android:id="@+id/radioButton4"
            android:layout_below="@+id/radioButton3"
            android:layout_centerHorizontal="true"
            android:onClick="chooseAnswer"/>

        <!-- Result text, will probably be removed -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="result"
            android:id="@+id/result"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:text="NEXT"
            android:id="@+id/goto_nextButton"
            android:layout_gravity="center"
            />




    </RadioGroup>

</RelativeLayout>